www/app/styles/biospecimen.css
.os-participant-ids {
  max-height: 275px;
  overflow-y: auto;
  margin-bottom: 20px;
}

.os-participant-matching {
  color: #8a6d3b;
  background-color: #fcf8e3;
  border: 1px solid #faebcc;
  padding: 15px;
  margin-bottom: 15px;
}

.os-participant-matching-msg {
  margin-bottom: 5px;
}

.os-participant-matching-tbl {
  margin-bottom: 5px;
}

.os-visits .list-group-item h5 {
  color: #666;
  font-weight: bold;
}

.os-visits .list-group-item.active h5 {
  color: #fff;
  font-weight: bold;
}

.os-visits .list-group-item-text .name {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: block;
  padding-bottom: 4px;
}

.fa.os-status-collected:before {
  color: #5cb85c;
  padding: 0px 4px;
}

.fa.os-status-missed:before {
  color: #888;
  padding: 0px 4px;
}

.fa.os-status-pending:before {
  color: #f0ad4e;
  padding: 0px 4px;
}

.fa.os-status-not-collected:before {
  color: #888;
  padding: 0px 4px;
}

.fa.os-status-closed:before {
  color: #d9534f!important;
  padding: 0px 4px;
}

.fa.os-status-reserved:before {
  color: rgba(128, 0, 128, 0.7);
  padding: 0px 4px;
}

.fa.os-status-distributed:before {
  color: #5bc0de;
  padding: 0px 4px;
}

.fa.os-status-virtual:before {
  color: #99f;
  padding: 0px 4px;
}

.fa.os-status-part-distributed:before {
  color: transparent;
}

.fa.os-status-part-distributed {
  width: 0.85em;
  height: 0.85em;
  background: linear-gradient(to right, #5cb85c, #5cb85c 50%, #5bc0de 50%, #5bc0de);
  border-radius: 50%;
  margin: 0px 4px;
}

.fa.os-status-returned:before {
  color: #b37cc6;
  padding: 0px 4px;
}

.fa.os-status-unplanned:before {
  color: #3B933B;
  padding: 0px 4px;
}

.fa.os-lineage-new:before, 
.fa.os-lineage-aliquot:before, 
.fa.os-lineage-derivative:before {
  color: #f0ad4e;
  padding: 0px 4px;
}

.panel .panel-heading .os-status-closed,
.os-page-header .os-status-closed {
  background: #d9534f!important;
}

.os-page-header .os-status-collected {
  background: #5cb85c!important;
}

.os-page-header .os-status-pending {
  background: #f0ad4e!important;
}

.os-page-header .os-status-distributed {
  background: #5bc0de!important;
}

.panel .panel-heading .os-status-closed,
.os-page-header .os-status-closed,
.os-page-header .os-status-pending,
.os-page-header .os-status-collected,
.os-page-header .os-status-distributed {
  padding: 0px 4px;
  color: #fff;
  font-weight: bold;
  border-radius: 4px;
  font-size: 14px;
  margin-bottom: 5px;
}

/** Used in CP events **/
.os-cpe-item {
  position: relative;
}

.os-cpe-item .list-group-item {
  border-bottom-right-radius: 0px;
  border-bottom-left-radius: 0px;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  margin-bottom: -1px;
}

.os-select-specimen-cb {
  height: 16px;
  margin-left: -8px;
  margin-top: 4px;
  float: left;
}

.os-key-values .value.os-status-closed,
.os-key-values .value.os-status-collected, 
.os-key-values .value.os-status-not-collected, 
.os-key-values .value.os-status-missed,
.os-key-values .value.os-status-pending,
.os-key-values .value.os-status-shipped,
.os-key-values .value.os-status-received,
.os-key-values .value.os-status-distributed,
.os-key-values .value.os-status-virtual,
.os-key-values .value.os-status-part-distributed,
.os-key-values .value.os-status-returned {
  width: initial!important;
  border-radius: 4px;
  font-weight: bold;
  color: white;
}

.dropdown-menu .fa.os-status-pending:before {
  padding: 0px;
}

.os-key-values .value.os-status-closed {
  background: #d9534f;
}

.os-key-values .value.os-status-collected {
  background: #5cb85c;
}

.os-key-values .value.os-status-pending {
  background: #f0ad4e;
}

.os-key-values .value.os-status-missed {
  background: #888;
}

.os-key-values .value.os-status-not-collected {
  background: #d9534f;
}

.os-key-values .value.os-status-virtual {
  background: #99f;
}

.os-key-values .value.os-status-distributed {
  background: #5bc0de;
}

.os-key-values .value.os-status-part-distributed {
  background: linear-gradient(to right, #5cb85c, #5cb85c 50%, #5bc0de 50%, #5bc0de);
}

.os-key-values .value.os-status-returned {
  background: #b37cc6;
}

.os-key-values .value.os-status-shipped {
  background: #5bc0de;
}

.os-key-values .value.os-status-received {
  background: #5cb85c;
}

.os-table.os-spmn-hide-options .os-select-specimen-cb {
  visibility: hidden;
}

.os-table.os-spmn-hide-options .os-more-options {
  visibility: hidden;
}

.os-specimen-desc {
  display: inline-block;
  white-space: pre-wrap;
  vertical-align: top;
  padding-right: 8px;
}

.os-table-tree .os-specimen-desc {
  padding-right: 36px;
}

.os-storage-position div.pos {
  padding-left: 0px;
  padding-right: 10px;
}

.progress-bar-unplanned {
  background-color: #3B933B;
}

.progress-bar-missed {
  background-color: #888;
}

.progress-bar-virtual {
  background-color: #99f;
}

.progress-bar-distributed {
  background-color: #5bc0de;
}

.progress-bar-closed {
  background-color: #d9534f;
}

.os-time-no-wheels tbody tr:first-child,
.os-time-no-wheels tbody tr:last-child {
  display: none;
}

.os-date-time .os-time-no-wheels tr:nth-child(2) td:nth-child(1) input.form-control {
  border-right: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
}

.os-date-time .os-time-no-wheels tr:nth-child(2) td:nth-child(2) {
  display: block;
  border-top: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  height: 34px;
  padding-top: 5px;
  box-shadow: rgba(0, 0, 0, 0.0745098) 0px 1px 1px inset;
}

.os-date-time .os-time-no-wheels tr:nth-child(2) td:nth-child(3) input.form-control {
  border-left: 0px;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
}

.os-date-time .os-timepicker {
  padding-left: 0px;
}

.os-md-time .os-time-no-wheels tr:nth-child(2) td:nth-child(2) {
  padding-top: 15px;
  border: 0px;
  box-shadow: none;
}

.os-text-checkbox:after {
  display: block;
  content: ' ';
  clear: both;
}

.os-text-checkbox .checkbox {
  margin-top: 4px;
  float: left;
}

.os-text-checkbox .message {
  color: #707070;
  float: left;
}
  
.os-consents .os-consent-stmt {
  font-weight: bold;
  font-style: italic;
  color: #707070;
  margin-bottom: 7px;
}

.os-consents .os-md-input.read {
  margin-top: 15px;
}

.os-consents .os-consent-response .btn {
  margin-left: 10px;
}

.os-spr .os-btns {
  margin-top: -15px;
  margin-bottom: 10px;
}

.os-secondary-row {
  background-color: #eee;
}

.os-cp-site-code .os-table-body .control-label {
  font-weight: normal;
}

.os-pool-specimen {
  background: #ebf2f9;
}

.os-inplace-form-edit-po.os-pool-specimen {
  background: transparent;
}

.os-list-container .os-key-values .item {
  float: none;
}

.os-list-container .os-key-values .item .value {
  white-space: pre-line;
  float: none;
  padding: 0px 5px;
}

.os-list-container .os-key-values .item .key {
  padding: 0px 5px;
}

.os-ctrl-padding-top {
  padding-top: 8px;
}

.os-cp-settings-popover {
  max-height: 252px;
  width: 275px;
  overflow: auto;
}

/** Scroll bar **/
.os-participant-tree::-webkit-scrollbar,
.os-specimen-tree-body::-webkit-scrollbar {
  height: 10px;
  width: 10px;
}

.os-participant-tree::-webkit-scrollbar-thumb:vertical,
.os-participant-tree::-webkit-scrollbar-thumb:horizontal,
.os-specimen-tree-body::-webkit-scrollbar-thumb:vertical,
.os-specimen-tree-body::-webkit-scrollbar-thumb:horizontal {
  background: #d0d0d0;
}

.os-participant-tree::-webkit-scrollbar-track:hover,
.os-specimen-tree-body::-webkit-scrollbar-track:hover {
  background: #f5f5f5;
  border: 1px solid #ddd;
}

.os-participant-tree::-webkit-scrollbar-track,
.os-specimen-tree-body::-webkit-scrollbar-track {
  background: #ffffff;
}

.os-participant-tree {
  padding-right: 15px;
}

/* Used for the panel / container containing the sticky specimen tree table */
.os-specimen-tree-pane {
  display: block;
  height: 100%;
  overflow-y: auto;
}

/* Tree table body */
.os-specimen-tree-body {
  height: calc(100% - 41px);
  overflow-x: auto;
  overflow-y: auto;
}

.os-tree-scroll-up-btn {
  width: 40px;
  height: 40px;
  border-radius: 100%;
  position: absolute;
  bottom: 20px;
  right: 20px;
  font-size: 24px;
  font-weight: bold;
  background: white;
  border: 1px solid #ddd;
}

